<resources>
    <string name="app_name">Week Planner</string>

    <!--Common-->
    <string name="common_action_import">Import</string>
    <string name="common_action_cancel">Cancel</string>

    <!--Заголовки-->
    <string name="title_next_week">Next week</string>
    <string name="title_archive">Archive</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About app</string>
    <string name="title_task">Task</string>
    <string name="title_card">Card</string>

    <!--Меню навигации-->
    <string name="nav_item_current_week">Current week</string>
    <string name="nav_item_next_week">Next week</string>
    <string name="nav_item_archive">Archive</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_about">About app</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!--Меню-->
    <string name="menu_import_card">Import card</string>
    <string name="menu_show_titles">Show titles</string>
    <string name="menu_show_cards">Show cards</string>
    <string name="menu_delete_card">Delete card</string>
    <string name="menu_import_task">Import task</string>
    <string name="menu_delete_task">Delete task</string>
    <string name="menu_select_week">Select week</string>
    <string name="menu_change_cart">Change card</string>
    <string name="menu_save_cart_title">Save</string>
    <string name="menu_save_task_title">Save</string>
    <string name="menu_check_selected">Check selected</string>
    <string name="menu_delete_selected">Delete selected</string>

    <!--Actions-->
    <string name="task_action_cancel">Cancel</string>
    <string name="task_action_save">Save</string>
    <string name="card_title_action_cancel">Cancel</string>
    <string name="card_title_action_save">Save</string>

    <!--Подсказки-->
    <string name="hint_card_title">Title</string>
    <string name="hint_task">Task</string>

    <!--Пустые списки-->
    <string name="empty_task_list">No tasks</string>
    <string name="empty_card_list">No cards</string>

    <!--Snackbar-->
    <string name="snackbar_task_deleted">Task deleted</string>
    <string name="snackbar_task_undo">Undo</string>

    <!--About-->
    <string name="about_desc">
        The main goal of the application is to allow you to create 3-4 cards with 2-3 tasks,
        that will help you to approach goal for this week. It\'s kind of Stephen Covey technique.\n
        \n
        The app was created because I needed:\n
        1) plan my week\n
        2) analyze what was done\n
        3) have a history of planning
    </string>
    <string name="about_version">version</string>

    <!--Dialog Import-->
    <string-array name="import_weeks">
        <item>@string/nav_item_current_week</item>
        <item>@string/nav_item_next_week</item>
        <item>@string/nav_item_archive</item>
    </string-array>
    <string name="dialog_title_import_from">Import from</string>
    <string name="dialog_title_cards">Cards</string>
    <string name="dialog_title_tasks">Tasks</string>

    <!--Настройки-->
    <string name="pref_start_week_day_title">Start day of week</string>
    <string name="pref_start_week_day_desc">Day when new week starts</string>
    <string name="pref_start_week_day_default">Monday</string>
    <string-array name="pref_start_week_day_entries">
        <item>@string/pref_start_week_day_default</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="pref_generate_card_color_title">Generate color</string>
    <string name="pref_generate_card_color_desc">Automatically generate random color for new card</string>
    <string name="pref_add_task_to_top_title">New task to start</string>
    <string name="pref_add_task_to_top_desc">Add a new task to the top of the list</string>
</resources>
